[project]
name = "mesa-a-dags"
version = "0.1.0"
description = "Airflow DAGs for MESA-A"
authors = [{ name = "Emanuel Lima", email = "emanuel-lima@outlook.com" }]
requires-python = ">=3.12"

dependencies = [
    "beautifulsoup4==4.15.0",
    "geopandas==1.1.3",
    "google-api-python-client==2.197.0",
    "google-auth-httplib2==0.4.0",
    "google-auth-oauthlib==1.4.0",
    "pandas==3.0.3",
    "pendulum==3.2.0",
    "rarfile==4.2",
    "requests==2.34.2",
    "sqlalchemy==2.0.51",
]

[dependency-groups]
dev = ["ipython==9.14.1"]
